# cpp-training

./: CMakeLists.txt
include/: Executor.h  Heading.h  Position.h  main.h
src/: CMakeLists.txt  Executor.cpp  Executor.h  Heading.cpp  Heading.h  Position.cpp  main.cpp  main.h
tests/: CMakeLists.txt  test.cpp
